--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
+black
+click==8.1.3
+codetiming
+isort
+ouilookup==0.3.1
+pre-commit
 pytest
 pytest-mock
-tox
-black
-isort
-codetiming
-scapy
 pyyaml
-click==8.1.3
-ouilookup==0.3.1
+scapy
+tox
 # -e . needed with setup.py file
