--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,5 +1,10 @@
 # Exclude a variety of commonly ignored directories.
 exclude = [
+    "LICENSE",
+    "SECURITY",
+    "README",
+    "tests",
+    "docs",
     ".bzr",
     ".direnv",
     ".eggs",
@@ -67,7 +72,7 @@ line-ending = "auto"
 #
 # This is currently disabled by default, but it is planned for this
 # to be opt-out in the future.
-docstring-code-format = false
+docstring-code-format = true
 
 # Set the line length limit used when formatting code snippets in
 # docstrings.
